Bug 165805 - FILEOPEN RTF page break after table missing
Summary: FILEOPEN RTF page break after table missing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.0.3 release
Hardware: All All
: medium normal
Assignee: Oliver Specht (CIB)
URL:
Whiteboard: target:25.8.0 target:25.2.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: RTF-Opening
  Show dependency treegraph
 
Reported: 2025-03-18 15:04 UTC by Oliver Specht (CIB)
Modified: 2025-04-07 16:56 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Break break after table is missing (53.66 KB, application/msword)
2025-03-18 15:04 UTC, Oliver Specht (CIB)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Specht (CIB) 2025-03-18 15:04:45 UTC
Created attachment 199874 [details]
Break break after table is missing

Load the attachment. 
The document should have two pages but the page break after the table is ignored.
Comment 1 Gabor Kelemen (Collabora) 2025-03-20 11:47:31 UTC
For the record this got broken in 5.1, with:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=e57752170e604c85a6fe8aeaa38784796e00bab1

author	Miklos Vajna <vmiklos@collabora.co.uk>	2015-10-26 08:56:05 +0100
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2015-10-26 08:56:22 +0100
commit e57752170e604c85a6fe8aeaa38784796e00bab1 (patch)

tdf#59454 RTF import: handle section break right before a table
Comment 2 Commit Notification 2025-03-20 18:05:52 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/00fd41ace152425b886a55fd4868faa976afd6b6

tdf#165805 RTF import of \page at table end fixed

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-03-21 11:16:03 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/db13f53f810b27cb036771d22a7f42321ca12677

tdf#165805 RTF import of \page at table end fixed

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.