tdf#165805 RTF import of \page at table end fixed

With 7d3778e0ef9f54f3c8988f1b84d58e7002d6c625 page breaks
in tables were ignored in docx import. That is not done in
RTF import anymore.

Change-Id: I7a0fa859360323376f84570a289ba91079f171cd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183096
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Jenkins