sw/qa/extras/rtfimport/rtfimport2.cxx
@@ -1066,6 +1066,13 @@ CPPUNIT_TEST_FIXTURE(Test, test165483Tdf)
     CPPUNIT_ASSERT_EQUAL(sal_Int32(0), getProperty<sal_Int32>(xStyle, u"ParaBottomMargin"_ustr));
 }
 
+CPPUNIT_TEST_FIXTURE(Test, test165805Tdf)
+{
+    createSwDoc("165805.rtf");
+    //without page break there would be only one page
+    CPPUNIT_ASSERT_EQUAL(2, getPages());
+}
+
 // tests should only be added to rtfIMPORT *if* they fail round-tripping in rtfEXPORT
 } // end of anonymous namespace
 CPPUNIT_PLUGIN_IMPLEMENT();
